--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.226
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Small adjustments to parallel citation handling.
+
+
+==========================
 Changes in version 1.0.225
 ==========================
 
