--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.238
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Use a static function for getAbbreviation, supplying
+  styleID as an explicit parameter.
+
+
+==========================
 Changes in version 1.0.237
 ==========================
 
