--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.239
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Guarantee that loadAbbreviation returns a meaningful
+  jurisdiction key even if raw string for abbreviation is empty.
+
+
+==========================
 Changes in version 1.0.238
 ==========================
 
