--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.243
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix suppression of editor (and other) name variables
+  rendered via cs:substitute.
+
+
+==========================
 Changes in version 1.0.242
 ==========================
 
