--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.248
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Clean up sort keys. Fixes some sort breakage.
+
+
+==========================
 Changes in version 1.0.247
 ==========================
 
