--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.259
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Turn parentheses flipping on or off in both
+  item prefix and item suffix.
+
+
+==========================
 Changes in version 1.0.258
 ==========================
 
