--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,36 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.266
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix bug in flipflop triggered by certain
+  combinations of mismatched quotation marks.
+
+
+==========================
+Changes in version 1.0.265
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Map "event" var to the "title" abbreviation
+  list segment.
+
+- Add "event" to the list of multilingual variables.
+  Enables multilingual, and also short-forming via
+  abbreviation plugins.
+
+- Parse out embedded pinpoint label specifiers from
+  the "section" variable. For legal support.
+
+==========================
 Changes in version 1.0.264
 ==========================
 
