--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.267
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Protect systems missing locale terms needed for
+  section variable parsing from corruption in the
+  field.
+
+==========================
 Changes in version 1.0.266
 ==========================
 
