--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,20 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.290
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Remove heuristic variable suppression code, which was
+  looking for trouble. Replace with explicit other-variable
+  suppression request hacked into the string provided by the
+  external abbreviations engine.
+
+
+==========================
 Changes in version 1.0.289
 ==========================
 
